# qingzhenyun-lite-cf

./: .gitignore  CMakeLists.txt  CMakeSettings.json  FindLibtorrentRasterbar.cmake  RCa02272  RCa13704  README.md  app_start.cpp  cpp.hint  icon.rc  winmsvc.cmake
common/: common_event_ids.h  common_window_ids.h
entity/: response_entity.h
frames/: login_frame.cpp  login_frame.h  main_frame.cpp  main_frame.h
frames/notebook/: note_index.cpp  note_index.h  remote_download_task.cpp  remote_download_task.h  remote_user_file_panel.cpp
lib-license/: cpprestsdk.txt  mpv.txt  openssl.txt  wxwindows.txt
model/: remote_download_task_model.cpp  remote_download_task_model.h  remote_file_model.cpp  remote_file_model.h  user_model.cpp  user_model.h
src/: RCa11348  qingzhenapp.cpp  qingzhenapp.h
src/api_model/: api_file_store_model.cpp  api_file_store_model.h  api_offline_task_model.cpp  api_offline_task_model.h  api_remote_file_model.cpp  api_remote_file_model.h  api_update_model.cpp  api_update_model.h  api_user_model.cpp  api_user_model.h
src/api_model/base/: base_api_model.cpp  base_api_model.h  token_store.cpp  token_store.h
src/common/: common_constants_wx.cpp  common_constants_wx.h  common_event_ids.h  common_fs.h  common_util.cpp  common_util.h  common_util.hpp  common_wx.h
src/entity/: config_entity.hpp  download_task.h  download_task.hpp  file_task_info.hpp  response_entity.h  single_url_task.h  task_info.h
src/frames/: loginframe.cpp  loginframe.h  mainframe.cpp  mainframe.h  updatedialog.cpp  updatedialog.h  userdialog.cpp  userdialog.h  userlogindialog.cpp  userlogindialog.h
src/frames/file/: RemoteFileSelect.cpp  RemoteFileSelect.h  add_directory_dialog.cpp  add_directory_dialog.h  remove_file_select.cpp  remove_file_select.h
src/frames/notebook/: mainnotebook.cpp  mainnotebook.h  my_remote_file.cpp  my_remote_file.h  offline_download_task_panel.cpp  offline_download_task_panel.h  sync_panel.cpp  sync_panel.h
src/frames/offline/: add_offline_task.cpp  add_offline_task.h  add_task_result_dialog.cpp  add_task_result_dialog.h  task_detail.cpp  task_detail.h
src/frames/system/: aboutdialog.cpp  aboutdialog.h  settingdialog.cpp  settingdialog.h  updatedialog.h
src/frames/user/: changeusernamedialog.cpp  changeusernamedialog.h  userdialog.cpp  userdialog.h  userlogindialog.cpp  userlogindialog.h
src/frames/user/register/: agreement_page.cpp  agreement_page.h  register_finish_page.cpp  register_finish_page.h  register_main_page.cpp  register_main_page.h  userregisterdialog.cpp  userregisterdialog.h
src/frames/userfile/: add_directory_dialog.cpp  add_directory_dialog.h  filedetail.cpp  filedetail.h
src/frames/video/: videopreviewframe.cpp  videopreviewframe.h
src/local_model/: config_model.cpp  config_model.h
src/model/: file_download_model.cpp  file_download_model.h  offine_task_model.cpp  offine_task_model.h  remote_download_task_model.cpp  remote_download_task_model.h  remote_file_model.cpp  remote_file_model.h  sync_model.cpp  sync_model.h  update_model.cpp  update_model.h  user_model.cpp  user_model.h
src/resources/: copy.xpm  delete_task.xpm  delete_trash.xpm  if_cloud_main.xpm  left_btn.xpm  new_directory.xpm  new_task.xpm  refresh.xpm  remote-file.xpm  right_btn.xpm  search.xpm  settings.xpm  up_level.xpm  user-disable.xpm  user.xpm
src/resources/file_icon/: icon_index.h
src/util/: common_api.cpp  common_api.h  common_util.h  listctrlutil.h  simple_timer.h  wcs_toolbox.cpp  wcs_toolbox.h
src/wcs/: wcs_toolbox.cpp  wcs_toolbox.h
trans/: zh_CN.mo
util/: common_api.cpp  common_api.h
